--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -451,6 +451,29 @@ jobs:
       run: conan create ./zlib/all --name=zlib --version=1.3.1 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+  
+  build-zlib-windows:
+    runs-on: windows-latest
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+      ARTIFACTORY_USER: ${{secrets.ARTIFACTORY_USERNAME}}
+    steps:
+    - uses: actions/checkout@v4
+    - uses: jfrog/setup-jfrog-cli@v4
+    - name: prepare runner
+      run: | 
+        pip install conan --break-system-packages
+        conan profile detect
+        conan remote add protestator-conan $env:ARTIFACTORY_URL
+        conan remote login -p $env:ARTIFACTORY_TOKEN protestator-conan $env:ARTIFACTORY_USER
+        conan remote remove conancenter
+    - name: build release
+      run: conan create ./zlib/all --name=zlib --version=1.3.1 -o shared=True
+    - name: build debug
+      run: conan create ./zlib/all --name=zlib --version=1.3.1 -s build_type=Debug -o shared=True
+    - name: deploy
+      run: conan upload "*" -r protestator-conan -c
 
 
   build-bzip2:
@@ -478,6 +501,28 @@ jobs:
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
 
+  build-bzip2-windows:
+    runs-on: windows-latest
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+      ARTIFACTORY_USER: ${{secrets.ARTIFACTORY_USERNAME}}
+    steps:
+    - uses: actions/checkout@v4
+    - uses: jfrog/setup-jfrog-cli@v4
+    - name: prepare runner
+      run: | 
+        pip install conan --break-system-packages
+        conan profile detect
+        conan remote add protestator-conan $env:ARTIFACTORY_URL
+        conan remote login -p $env:ARTIFACTORY_TOKEN protestator-conan $env:ARTIFACTORY_USER
+        conan remote remove conancenter
+    - name: build release
+      run: conan create ./bzip2/all --name=bzip2 --version=1.0.8 -o shared=True
+    - name: build debug
+      run: conan create ./bzip2/all --name=bzip2 --version=1.0.8 -s build_type=Debug -o shared=True
+    - name: deploy
+      run: conan upload "*" -r protestator-conan -c
 
   build-brotli:
     runs-on: ubuntu-latest
@@ -1823,7 +1868,7 @@ jobs:
         conan upload "*" -r protestator-conan -c 
 
   build-qt-debug:
-    runs-on: LargerRunner
+    runs-on: ubuntu-latest
     env: # Or as an environment variable
       ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
       ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
@@ -1846,7 +1891,7 @@ jobs:
         conan upload "*" -r protestator-conan -c
   
   build-qt-debug-with-nettools:
-    runs-on: LargerRunner
+    runs-on: ubuntu-latest
     env: # Or as an environment variable
       ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
       ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
@@ -1886,11 +1931,11 @@ jobs:
         conan remote remove conancenter
     - name: release
       run: | 
-        conan create ./strawberryperl/all --name=strawberryperl --version=5.40.2.1
+        conan create ./strawberryperl/all --name=strawberryperl --version=5.40.2.1 -o shared=True
         conan upload "*" -r protestator-conan -c 
     - name: debug
       run: | 
-        conan create ./strawberryperl/all --name=strawberryperl --version=5.40.2.1 -s build_type=Debug
+        conan create ./strawberryperl/all --name=strawberryperl --version=5.40.2.1 -s build_type=Debug -o shared=True
         conan upload "*" -r protestator-conan -c 
 
   # build-z3:
