--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1096,7 +1096,7 @@ jobs:
         conan remote remove conancenter
     - name: build release
       run: | 
-        conan create ./pcre2/all --name=pcre2 --version=10.44
+        conan create ./pcre2/all --name=pcre2 --version=10.44 --build missing
         conan upload "*" -r protestator-conan -c
     - name: build debug
       run: |
@@ -1205,7 +1205,7 @@ jobs:
         conan remote remove conancenter
     - name: build release
       run: | 
-        conan create ./elfutils/all --name=elfutils --version=0.190
+        conan create ./elfutils/all --name=elfutils --version=0.190 --build missing
         conan upload "*" -r protestator-conan -c
     - name: build debug
       run: |
@@ -1233,7 +1233,7 @@ jobs:
         conan remote remove conancenter
     - name: build release
       run: |
-       conan create ./openssl/3.x.x --name=openssl --version=3.6.0
+       conan create ./openssl/3.x.x --name=openssl --version=3.6.0 --build missing
        conan upload "*" -r protestator-conan -c
     - name: build debug
       run: |
@@ -1287,11 +1287,11 @@ jobs:
         conan remote remove conancenter
     - name: build release
       run: | 
-        conan create ./libxml2/cmake --name=libxml2 --version=2.15.0
+        conan create ./libxml2/cmake --name=libxml2 --version=2.15.0 --build missing
         conan upload "*" -r protestator-conan -c
     - name: build debug
       run: | 
-        conan create ./libxml2/cmake --name=libxml2 --version=2.15.0 -s build_type=Debug
+        conan create ./libxml2/cmake --name=libxml2 --version=2.15.0 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
 
   
@@ -1315,7 +1315,7 @@ jobs:
         conan remote remove conancenter
     - name: build release
       run: |
-        conan create ./freetype/meson --name=freetype --version=2.14.1
+        conan create ./freetype/meson --name=freetype --version=2.14.1 --build missing
         conan upload "*" -r protestator-conan -c
     - name: build debug
       run: |
@@ -1454,9 +1454,9 @@ jobs:
         conan remote login -p $ARTIFACTORY_TOKEN protestator-conan $ARTIFACTORY_USER
         conan remote remove conancenter
     - name: build release
-      run: conan create ./redboltz-mqtt_cpp/all --name=redboltz-mqtt_cpp --version=13.2.1
+      run: conan create ./redboltz-mqtt_cpp/all --name=redboltz-mqtt_cpp --version=13.2.1 --build missing
     - name: build debug
-      run: conan create ./redboltz-mqtt_cpp/all --name=redboltz-mqtt_cpp --version=13.2.1 -s build_type=Debug
+      run: conan create ./redboltz-mqtt_cpp/all --name=redboltz-mqtt_cpp --version=13.2.1 -s build_type=Debug --build missing
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
 
