--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2012,6 +2012,32 @@ jobs:
         conan create ./libgettext/all --name=libgettext --version=0.22 -s build_type=Debug -o shared=True
         conan upload "*" -r protestator-conan -c 
 
+  build-winflexbison:
+    runs-on: windows-latest
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+      ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USERNAME }}
+    steps:
+    - uses: actions/checkout@v4
+    - uses: jfrog/setup-jfrog-cli@v4
+    - name: prepare runner
+      run: | 
+        pip install conan --break-system-packages
+        conan profile detect
+        conan remote add protestator-conan $env:ARTIFACTORY_URL
+        conan remote login -p $env:ARTIFACTORY_TOKEN protestator-conan $env:ARTIFACTORY_USER
+        conan remote remove conancenter
+    - name: release
+      run: |
+        conan create ./winflexbison/all --name=winflexbison --version=2.5.25 -o shared=True
+        conan upload "*" -r protestator-conan -c 
+    - name: debug
+      run: | 
+        conan create ./winflexbison/all --name=winflexbison --version=2.5.25 -s build_type=Debug -o shared=True
+        conan upload "*" -r protestator-conan -c
+
+  
   # build-z3:
   #   runs-on: ubuntu-latest
   #   env: # Or as an environment variable
